--- a/firstApp/package.json
+++ b/firstApp/package.json
@@ -18,6 +18,7 @@
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-vector-icons": "^10.0.3",
     "react-native-web": "^0.19.10",
     "styled-components": "^6.1.8"
