--- a/firstApp/package.json
+++ b/firstApp/package.json
@@ -14,17 +14,21 @@
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
-    "expo": "~50.0.14",
+    "deprecated-react-native-prop-types": "^5.0.0",
+    "expo": "~50.0.15",
     "expo-status-bar": "~1.11.1",
+    "patch-package": "^8.0.0",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-reanimated-carousel": "^3.5.1",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-vector-icons": "^10.0.3",
     "react-native-web": "^0.19.10",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/react-native-snap-carousel": "^3.8.11"
   },
   "private": true
 }
