--- a/firstApp/package.json
+++ b/firstApp/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
+    "axios": "^1.6.8",
     "deprecated-react-native-prop-types": "^5.0.0",
     "expo": "~50.0.15",
     "expo-status-bar": "~1.11.1",
